--- a/manifest.json
+++ b/manifest.json
@@ -19,15 +19,15 @@
   "browser_action": {
     "default_title": "Open in Panel",
     "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "19": "images/icon/icon-19.png",
+      "38": "images/icon/icon-38.png"
     }
   },
 
   "icons": {
-    "19":  "images/icon-19.png",
-    "38":  "images/icon-38.png",
-    "48":  "images/icon-48.png",
-    "128": "images/icon-128.png"
+    "19":  "images/icon/icon-19.png",
+    "38":  "images/icon/icon-38.png",
+    "48":  "images/icon/icon-48.png",
+    "128": "images/icon/icon-128.png"
   }
 }
