--- a/manifest.json
+++ b/manifest.json
@@ -20,15 +20,15 @@
   "browser_action": {
     "default_title": "__MSG_extension_name__",
     "default_icon": {
-      "19": "images/icon/icon-19.png",
-      "38": "images/icon/icon-38.png"
+      "19": "/images/icon/icon-19.png",
+      "38": "/images/icon/icon-38.png"
     }
   },
 
   "icons": {
-    "19":  "images/icon/icon-19.png",
-    "38":  "images/icon/icon-38.png",
-    "48":  "images/icon/icon-48.png",
-    "128": "images/icon/icon-128.png"
+    "19":  "/images/icon/icon-19.png",
+    "38":  "/images/icon/icon-38.png",
+    "48":  "/images/icon/icon-48.png",
+    "128": "/images/icon/icon-128.png"
   }
 }
