--- a/manifest.json
+++ b/manifest.json
@@ -8,16 +8,19 @@
   "version": "1.1.0",
   "author": "Leo Nikkilä",
 
-  "permissions": ["storage"],
+  "permissions": ["storage", "notifications", "tabs", "chrome://favicon/"],
+
   "default_locale": "en",
 
   "background": {
     "scripts": [
       "js/background.js"
-    ]
+    ],
+    "persistent": false
   },
 
   "browser_action": {
+    "default_popup": "/html/popup.html",
     "default_title": "__MSG_extension_name__",
     "default_icon": {
       "19": "/images/icon/icon-19.png",
@@ -30,5 +33,7 @@
     "38":  "/images/icon/icon-38.png",
     "48":  "/images/icon/icon-48.png",
     "128": "/images/icon/icon-128.png"
-  }
+  },
+
+  "content_security_policy": "script-src 'self' https://www.facebook.com https://platform.twitter.com https://plusone.google.com https://apis.google.com; object-src 'self'"
 }
