--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,23 @@
+#
+# Common editor preferences.
 # http://editorconfig.org
+#
 
 root = true
 
 [*]
-end_of_line = lf
-insert_final_newline = true
-indent_style = space
-indent_size = 2
 charset = utf8
+end_of_line = lf
+indent_size = 2
+indent_style = space
+insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
 
-[*.markdown]
+[*.mdown]
 trim_trailing_whitespace = false
 
-[*.mdown]
+[*.markdown]
 trim_trailing_whitespace = false
