--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "chrome-panel-tabs",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "coffee-script": "^1.8.0",
+    "del": "^0.1.3",
+    "gulp": "^3.8.10"
+  }
 }
