More generic directory names.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -14,7 +14,7 @@
 
   "background": {
     "scripts": [
-      "js/background.js"
+      "scripts/background.js"
     ],
     "persistent": false
   },
