Use a fork of `gulp-jasmine-phantom` meanwhile.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "del": "~0.1.3",
     "gulp": "~3.8.10",
-    "gulp-jasmine-phantom": "~1.0.15"
+    "gulp-jasmine-phantom": "git://github.com/lnikkila/gulp-jasmine-phantom.git#abort-on-fail-fixes"
   },
   "scripts": {
     "test": "gulp test"
