Additional checks for Code Climate via JSHint.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,10 @@
 {
+  "eqeqeq": true,
   "browser": true,
   "devel": true,
   "indent": 2,
+  "maxlen": 80,
+  "quotmark": true,
   "predef": [
     "chrome"
   ]
