--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "del": "~0.1.3",
     "gulp": "~3.8.10",
-    "gulp-jasmine-phantom": "git://github.com/lnikkila/gulp-jasmine-phantom.git#abort-on-fail-fixes"
+    "gulp-jasmine-phantom": "git://github.com/lnikkila/gulp-jasmine-phantom.git#abort-on-fail-fixes",
+    "gulp-zip": "~2.0.3"
   },
   "scripts": {
     "test": "gulp test"
