Add a separate options page.
Closes #32.

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -35,6 +35,11 @@
     }
   },
 
+  "options_ui": {
+    "page": "/html/options.html",
+    "chrome_style": false
+  },
+
   "commands": {
     "activeTabIntoPanel": {
       "suggested_key": {
