Implement Google Analytics
I’m using this to figure out which features are used and how to improve
them. Users can opt-in during the initial setup; analytics will be
disabled for existing users.

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -64,5 +64,5 @@
     "128": "/images/icon/icon-128.png"
   },
 
-  "content_security_policy": "script-src 'self' https://www.facebook.com https://platform.twitter.com https://plusone.google.com https://apis.google.com; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://www.facebook.com https://platform.twitter.com https://plusone.google.com https://apis.google.com https://www.google-analytics.com; object-src 'self'"
 }
